--- a/preamble.tex
+++ b/preamble.tex
@@ -413,6 +413,11 @@
 \newcommand{\ter}[1][R]{\block #1}
 \definecolor{lightblue}{RGB}{120, 220, 255}
 
+\newcommand{\altP}{\hyperref[lem:alternative-projective-axiom]{\upshape\textsc{p$_3$\!'}}}
+\newcommand{\altPp}{\hyperref[lem:alternative-projective-axiom]{\upshape\textsc{p$_3$\!''}}}
+
+\newcommand{\hallP}[1]{\hyperref[xmpl:hall-plane]{\upshape\textsc{p$_#1$\!'}}}
+
 \newcommand{\+}{\dotplus}
 \usepackage{amsmath}
 
