--- a/3-Coordinatization.tex
+++ b/3-Coordinatization.tex
@@ -4252,3 +4252,100 @@ In what follows we will say that the ternary ring $(\ter,T)$ is a quasifield, fi
 \begin{cor} {\upshape[Gleason]}
     Any finite projective plane with the Fano property is isomorphic to\/ $\PG(2,2^r)$ for some integer\/ $r\ge 1$.
 \end{cor}
+
+\section{Exercises}
+
+\begin{exr}
+    Determine the coordinate structure of the plane obtained by\/ {\upshape Hall’s Free Extension Process \ref{xmpl:hall-plane} (See also \ref{exr:Hall-incidence-tables})}.
+\end{exr}
+
+\begin{solution}
+    \[
+        \begin{tikzpicture}[
+            scale=1.1,
+            font=\small,
+            point/.style={
+                draw,
+                circle,
+                color=black,
+                fill=green,
+                inner sep=1.2pt},
+                every node/.style={font=\footnotesize},
+            ]
+            \pgfmathsetmacro{\u}{1.7};
+            
+            % Points
+            \coordinate (xstart) at (0.0,0.0);
+            \coordinate (xend) at (3.7*\u,0.0);
+            \coordinate (ystart) at (0.0,0.0);
+            \coordinate (yend) at (0.0,2.4*\u);
+            \coordinate (A4) at (\u*1.1,\u*1.3);
+            \coordinate (A1) at (0.0,0.0);
+            
+            % Axes
+            \draw[name path=xaxis,
+                color=orange,
+                thick
+            ] (xstart) -- (xend)
+                node[right,text=black] {$\ell_1$}
+                node[point,
+                    fill=black,
+                    pos=0.7,
+                    label={[text=black,xshift=0mm,yshift=-6mm]:
+                        $A_2$}
+                ] (A2) {};
+            \draw[name path=yaxis,
+                color=orange,
+                thick
+            ] (ystart) -- (yend)
+                node[above,text=black] {$\ell_2$}
+                node[point,
+                pos=0.78,
+                fill=black,
+                label={[text=black,left,yshift=-1mm]:
+                    $A_3$}
+                ] (A3) {};
+            \node[point,
+                fill=black,
+                label={[xshift=-0.4mm,yshift=0.3mm]:
+                    $A_4$}
+            ] at (A4) {};
+
+            \draw[name path=A2A3] (A3) -- ($(A3)!1.1!(A2)$)
+                node[
+                    label={[xshift=2mm,yshift=-5mm]: $\ell_4$}
+                ] {};
+            \draw[name path=A1A4] (A1) -- ($(A1)!1.2!(A4)$)
+                node[above right] {$\ell_3$};
+            \path[name intersections={of=A2A3 and A1A4,by=A7}];
+            \draw[name path=A3A4] (A3) -- ($(A3)!3.55!(A4)$)
+                node[
+                    label = {[xshift=2mm,yshift=-5.2mm]: $\ell_6$}
+                ] {};
+            \path[name intersections={of=A3A4 and xaxis,by=A5}];
+            \draw[name path=A2A4] (A2) -- ($(A2)!1.9!(A4)$)
+                node[label={[xshift=-2mm,yshift=-2mm,text=black]: $\ell_5$}
+                ] {};
+            \path[name intersections={of=A2A4 and yaxis,by=A6}];
+            
+            \node[point,
+                fill=white,
+                label={[xshift=0.2mm,yshift=-5.8mm]:$A_7$}
+            ] at (A7) {};
+            \node[point,
+                fill=green,
+                label={[xshift=-3mm,yshift=-3mm]:$A_6$}
+            ] at (A6) {};
+            \node[point,
+                fill=green,
+                label={[xshift=0mm,yshift=-6mm]:$A_5$}
+            ] at (A5) {};
+            \node[point,
+                fill=black,
+                label={[xshift=-2mm,yshift=-5.5mm,text=black]:
+                    $A_1$}
+            ] at (A1) {};
+        \end{tikzpicture}
+    \]
+    
+\end{solution}
